--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,10 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h1>Welcome to My API</h1>
-    <p>This is a simple front-end to interact with the API.</p>
-
-    <!-- Form to make API requests -->
-    <form id="apiForm">
-      <label for="inputField">Enter API Input:</label>
-      <input type="text" id="inputField" name="inputField" required />
-      <button type="submit">Send Request</button>
-    </form>
-
-    <h3>Response:</h3>
-    <pre id="responseOutput"></pre>
-
+    <h1>Welcome to your ATM</h1>
+    <p>Perform any ATM related tasks that you desire.</p>
+    <button onclick="location.href='/login'">Log in</button>
+    <!-- <button onclick="location.href='/signin'">Sign in</button> -->
     <script src="/js/script.js"></script>
   </body>
 </html>
