Auth and add Pages

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to your ATM</h1>
     <p>Perform any ATM related tasks that you desire.</p>
     <button onclick="location.href='/login'">Log in</button>
-    <!-- <button onclick="location.href='/signin'">Sign in</button> -->
+    <button onclick="location.href='/signup'">Sign up</button>
     <script src="/js/script.js"></script>
   </body>
 </html>
