--- a/public/signup.html
+++ b/public/signup.html
@@ -8,19 +8,14 @@
   </head>
   <body>
     <h1>Sign Up Page</h1>
-    <form id="signupForm" action="/register" method="POST">
+    <form id="signupForm" action="/users" method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required />
       <label for="password">Password:</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        required
-        minlength="8"
-      />
+      <input type="password" id="password" name="password" required />
+
       <label for="confirmPassword">Confirm Password:</label>
       <input
         type="password"
