--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Dashboard Page</h1>
-    <p>HELLO LOG IN WAS SUCCESSFUL!</p>
+    <p>Log in was Successful</p>
   </body>
 </html>
