Add Nav and Footer

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <!-- Placeholder for Nav -->
+    <div id="nav-placeholder"></div>
+
     <h1>Dashboard Page</h1>
     <p>Log in was Successful</p>
+
+    <!-- Placeholder for Footer -->
+    <div id="footer-placeholder"></div>
+
+    <!-- Include your JavaScript file to load components -->
+    <script src="/js/load-components.js"></script>
   </body>
 </html>
