Adding Accounts Data and Routes

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,6 +20,7 @@
 
     <!-- Accounts Section -->
     <div id="accounts-section">
+      <button id="create-default-account" type="submit">Account +</button>
       <h2>Your Accounts:</h2>
       <ul id="accounts-list">
         <!-- Accounts will be populated here -->
@@ -29,6 +30,7 @@
     <div id="footer-placeholder"></div>
     <script src="/js/load-components.js"></script>
     <script src="/js/dashboard.js"></script>
+    <script src="/js/account.js"></script>
     <!-- Add this line -->
   </body>
 </html>
