Accounts layout added

--- a/public/nav.html
+++ b/public/nav.html
@@ -2,6 +2,7 @@
 <nav>
   <ul>
     <li><a href="/dashboard">Dashboard</a></li>
+    <li><a href="/accounts">Accounts</a></li>
     <!-- <li><a href="/profile">Profile</a></li> -->
     <!-- Add more navigation links as needed -->
   </ul>
